@@ -48,3 +48,4 @@
 #define HWCAP_SPARC_PAUSE	0x01000000
 #define HWCAP_SPARC_CBCOND	0x02000000
 #define HWCAP_SPARC_CRYPTO	0x04000000
+#define HWCAP_SPARC_ADP		0x08000000
